Code/ROS2_Code/roverbrain_ws/log/build_2025-07-23_23-44-23/roverbrain_pkg/stderr.log
  File "/home/rover/roverbrain_ws/install/roverbrain_pkg/lib/python3.12/site-packages/roverbrain_pkg/steering_control.py", line 17
    ser.write(bytes(msg.steering_angle+90)
             ^
SyntaxError: '(' was never closed

